# spmm_pim

./: .gitignore  .travis.yml  Cargo.toml  all.config.toml  all_size.err.json  all_size.err.toml  all_size.json  all_size.ok.json  all_size.ok.toml  all_size.toml  default.toml  full_all_size.toml  jupyter.ipynb  justfile  log_config.yml  log_config_debug.yml  readme.md  result.json  result.toml  result.txt  result_test.ok.json  result_test.ok.toml  result_test.toml  run.py  run.sh  rust-toolchain.toml  test.mtx
.github/workflows/: rust.yml
configs/: all.config.toml  ddr4.toml  ddr4chunk.toml  ddr4test.toml  debug.toml  default.toml  full_all_size.toml  hmb.toml  large.toml
configs/interleaving/: 1.toml  16.toml  2.toml  4.toml  8.toml
configs/scheduler_modes/: batched_shuffle.toml  sequence.toml  shuffle.toml
configs/scheduler_modes/batch_sizes/: 16.toml  32.toml  64.toml
configs/store_sizes/: 1.toml  128.toml  2.toml  256.toml  32.toml  4.toml  512.toml  64.toml  8.toml  unlimited.toml
mtx/: server.py  test.mtx
src/: args.rs  bsr.rs  bsr_row_builder.rs  csv_nodata.rs  lib.rs  main.rs  non_pim.rs  pim.rs  reorder_system.rs  result.rs  run.rs  run_main.rs  settings.rs  two_matrix.rs  utils.rs
src/sim/: bank.rs  buffer_status.rs  channel_merger.rs  chip_merger.rs  comp_collector.rs  component.rs  dimm_merger.rs  final_receiver.rs  full_result_merger_worker.rs  id_translation.rs  merger.rs  merger_status.rs  merger_task_dispather.rs  merger_task_sender.rs  merger_task_worker.rs  mod.rs  partial_sum_collector.rs  partial_sum_sender.rs  partial_sum_sender_bank.rs  partial_sum_sender_dimm.rs  partial_sum_signal_collector.rs  queue_tracker.rs  sim_time.rs  task_balance.rs  task_reorderer.rs  task_router.rs  task_sender.rs  types.rs
src/utils/: generator.rs  mod.rs  plot.rs  run.rs  serial_test.rs
tests/: debug.rs  integeration.rs  release_tests.rs
www/: Dockerfile  bootstrap.js  bootstrap.ts  build_docker.sh  index.html  index.js  index.ts  package-lock.json  package.json  spmm.ts  tsconfig.json  webpack.config.js
