[package]
name = "spmm_pim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprs = "0.11.0"
itertools = "0.10"
log = "0.4.16"
env_logger="0.9.0"
serde_json="1.0.79"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.10", features = ["derive"] }
config = "0.13.1"
unroll = "0.1.5"
