[package]
edition = "2021"
name = "spmm_pim"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
clap_complete = "3.1.2"
config = "0.13.1"
# desim = {git = "https://github.com/shenjiangqiu/desim.git"}
qsim = {git = "https://github.com/shenjiangqiu/qsim"}
# desim = {path = "../desim"}
enum-as-inner = "0.5.0"
eyre = "0.6.8"
genawaiter = "0.99.1"
hdrhistogram = "7.5.0"
itertools = "0.10"
log = "0.4.17"
log4rs = "1.1.1"
plotters = {version = "0.3.2"}
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
reqwest = {version = "0.11.10", features = ["blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.79"
serde_yaml = "0.8.24"
sprs = "0.11.0"
toml = "0.5.9"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-test = "0.3.30"
[profile.release]
lto = true
